WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158828
[iOS WK2] On iPad, indirect focussing of a text field doesn't always scroll to the correct location
https://bugs.webkit.org/show_bug.cgi?id=158828
Summary
[iOS WK2] On iPad, indirect focussing of a text field doesn't always scroll t...
Simon Fraser (smfr)
Reported
2016-06-15 21:51:59 PDT
[iOS WK2] On iPad, indirect focussing of a text field doesn't always scroll to the correct location
Attachments
Patch
(23.30 KB, patch)
2016-06-15 22:00 PDT
,
Simon Fraser (smfr)
enrica
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2016-06-15 22:00:14 PDT
Created
attachment 281439
[details]
Patch
WebKit Commit Bot
Comment 2
2016-06-15 22:03:05 PDT
Attachment 281439
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:1070: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:1071: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 2 in 20 files If any of these errors are false positives, please file a bug against check-webkit-style.
Enrica Casucci
Comment 3
2016-06-16 11:08:39 PDT
Comment on
attachment 281439
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=281439&action=review
> Source/WebKit2/UIProcess/API/Cocoa/WKWebViewPrivate.h:255 > +- (void)keyboardAccessoryBarPrevious WK_AVAILABLE(WK_MAC_TBA, WK_IOS_TBA);
Why for macOS as well?
> Source/WebKit2/UIProcess/API/Cocoa/WKWebViewPrivate.h:257 > +@property (nonatomic) BOOL forceIPadStyleZoomOnInputFocus WK_AVAILABLE(WK_MAC_TBA, WK_IOS_TBA);
Ditto
> LayoutTests/fast/forms/ios/resources/zooming-test-utils.js:2 > +function testZoomAfterTap(targetElement, xOffset, yOffset, useIPadBehavior)
Do you also need to update the tests you added yesterday, now that this function takes one extra parameter?
Simon Fraser (smfr)
Comment 4
2016-06-16 11:49:44 PDT
https://trac.webkit.org/r202132
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug