Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm
@@ -4486,6 +4486,16 @@ static WebKit::UserInterfaceLayoutDirection toUserInterfaceLayoutDirection(UISem
     [_contentView accessoryTab:NO];
 }
 
+- (BOOL)forceIPadStyleZoomOnInputFocus
+{
+    return [_contentView forceIPadStyleZoomOnInputFocus];
+}
+
+- (void)setForceIPadStyleZoomOnInputFocus:(BOOL)forceIPadStyleZoom
+{
+    [_contentView setForceIPadStyleZoomOnInputFocus:forceIPadStyleZoom];
+}
+
 #endif // PLATFORM(IOS)
 
 #if PLATFORM(MAC)
