Source/WebKit2/UIProcess/ios/WKContentViewInteraction.h
@@ -171,6 +171,9 @@ struct WKAutoCorrectionData {
     BOOL _showDebugTapHighlightsForFastClicking;
 
     BOOL _resigningFirstResponder;
+
+    // For testing.
+    BOOL _forceIPadStyleZoomOnInputFocus;
 }
 
 @end
@@ -230,5 +233,11 @@ struct WKAutoCorrectionData {
 - (void)_unregisterPreview;
 @end
 #endif
+
+@interface WKContentView (WKInteractionTesting)
+
+@property (nonatomic) BOOL forceIPadStyleZoomOnInputFocus;
+
+@end
 
 #endif // PLATFORM(IOS)
