Tools/WebKitTestRunner/UIScriptContext/UIScriptController.cpp
@@ -178,6 +178,15 @@ JSObjectRef UIScriptController::contentVisibleRect() const
     return nullptr;
 }
 
+bool UIScriptController::forceIPadStyleZoomOnInputFocus() const
+{
+    return false;
+}
+
+void UIScriptController::setForceIPadStyleZoomOnInputFocus(bool)
+{
+}
+
 void UIScriptController::platformSetWillBeginZoomingCallback()
 {
 }
